# worldcup2026-ml

./: .gitignore  MANUAL.md  Makefile  README.md  pyproject.toml
app/: Home.py  _shared.py
app/pages/: 1_Estadisticas.py  2_Simular_Partido.py  3_Simular_Torneo.py  4_Ingresar_Resultados.py
src/: config.py
src/data/: cleaner.py  loader.py
src/features/: builder.py  elo.py  environment.py  form.py  pedigree.py
src/live/: updater.py
src/models/: base.py  ensemble_model.py  poisson_model.py  train.py  validation.py
src/simulation/: bracket_2026.py  group_stage.py  knockout.py  match_engine.py  monte_carlo.py
src/utils/: geo.py  logging.py
src/worldcup2026_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_elo.py  test_live_updater.py  test_no_leakage.py  test_simulation.py
