[project]
name = "worldcup2026-ml"
version = "0.1.0"
description = "Pipeline ML end-to-end para predecir y simular el Mundial FIFA 2026"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "pyarrow>=12.0",
    "kagglehub>=0.3",
    "streamlit>=1.30",
    "plotly>=5.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
